# django-tutorials

./: .pre-commit-config.yaml  README.md  _pyproject.toml  justfile  pyproject.toml  snippets.md
.github/workflows/: django.yml
django-by-example/dgamboa-blog/: README.md  pyproject.toml
django-by-example/dgamboa-blog/dgamboa_blog/: manage.py
django-by-example/dgamboa-blog/dgamboa_blog/blog/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
django-by-example/dgamboa-blog/dgamboa_blog/blog/management/commands/: __init__.py  posts_create.py  posts_delete.py
django-by-example/dgamboa-blog/dgamboa_blog/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
django-by-example/dgamboa-blog/dgamboa_blog/blog/scripts/: __init__.py  orm_values.py  orm_values_list.py
django-by-example/dgamboa-blog/dgamboa_blog/blog/templates/blog/: base.html
django-by-example/dgamboa-blog/dgamboa_blog/blog/templates/blog/post/: comment.html  detail.html  list.html  share.html
django-by-example/dgamboa-blog/dgamboa_blog/blog/templates/blog/post/includes/: comment_form.html
django-by-example/dgamboa-blog/dgamboa_blog/blog/templatetags/: blog_tags.py
django-by-example/dgamboa-blog/dgamboa_blog/dgamboa/: asgi.py  settings.py  urls.py  wsgi.py
notes/: django_commands.md  models.md  settings.md  utils.md
