[tool.poetry]
name = "django-tutorials"
version = "0.1.0"
description = ""
authors = ["difegam <difegam3@gmail.com>"]
readme = "README.md"
packages = [{ include = "django_tutorials" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.5"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 100
profile = "django"
combine_as_imports = true
include_trailing_comma = true

[tool.black]
line_length = 100
target_version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["*/migrations/*.py", "*/tests/*"]

[tool.pylint]
max-line-length = 100
errors-only = true

[tool.ruff.lint]
select = [
    "B",
    "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PTH",
    "PIE",
    "PL",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT",
    "DJ",
    "UP",
]
ignore = ["E402", "E501", "B008", "UP035", "N818", "E741"]
fixable = ["E", "F", "W", "C", "B", "Q", "I001", "Q000"]
