[tool.poetry]
name = "dgamboa-blog"
version = "0.1.0"
description = "Dgamboa Blog"
authors = ["difegam <difegam3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
pytest = "7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
